Código de los vídeos #1 y #2: ejemplo de ArrayList